--- a/valentines.html
+++ b/valentines.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content= "width-device-width, initial-scale=1.0"> <!--this sets the width of the website-->
         <meta http-equiv="X-UA-Compatible" content="ie=edge"> <!--this makes the website work in the latest internet explorer version -->
          <!--CSS-->
-        <link rel="stylesheet" type="text/css" href="static/style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
 
     </head>
     <body>
@@ -29,6 +29,7 @@
         </audio>
 
     <!-- LogicJS-->
-     <script type="text/javascript" src="static/logic.js"></script>
+     <script type="text/javascript" src="logic.js"></script>
     </body>
+
 </html> 
